[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/spritesheets/ui.png" type="Texture" id=1]
[ext_resource path="res://gui/reload_indicator/reload_indicator.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 6, 44, 36, 4 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 6, 49, 36, 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 49, 44, 4, 6 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 54, 44, 4, 6 )

[node name="ReloadIndicator" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -18.0
margin_top = -12.0
margin_right = 18.0
margin_bottom = 18.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseCursor" type="TextureRect" parent="VBoxContainer"]
margin_right = 36.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )

[node name="Bars" type="Control" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 36.0
margin_bottom = 30.0

[node name="ReloadBar" type="TextureRect" parent="VBoxContainer/Bars"]
margin_right = 36.0
margin_bottom = 4.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReloadBarNoQuickReload" type="TextureRect" parent="VBoxContainer/Bars"]
margin_right = 36.0
margin_bottom = 4.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nobs" type="Control" parent="VBoxContainer/Bars"]
margin_top = -1.0
margin_right = 35.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="TextureRect" parent="VBoxContainer/Bars/Nobs"]
margin_right = 4.0
margin_bottom = 6.0
texture = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuickReload" type="TextureRect" parent="VBoxContainer/Bars/Nobs"]
margin_right = 4.0
margin_bottom = 6.0
texture = SubResource( 4 )
